WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75832
CSSStyleSelector: Any attribute with a decl() can be assumed to be mapped.
https://bugs.webkit.org/show_bug.cgi?id=75832
Summary
CSSStyleSelector: Any attribute with a decl() can be assumed to be mapped.
Andreas Kling
Reported
2012-01-09 00:17:07 PST
If an attribute has a decl() pointer, we don't need to check isMappedAttribute(), so let's change that to an assertion.
Attachments
Patch
(1.56 KB, patch)
2012-01-09 00:19 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2012-01-09 00:19:59 PST
Created
attachment 121627
[details]
Patch
Andreas Kling
Comment 2
2012-01-09 00:42:50 PST
Comment on
attachment 121627
[details]
Patch Clearing flags on attachment: 121627 Committed
r104440
: <
http://trac.webkit.org/changeset/104440
>
Andreas Kling
Comment 3
2012-01-09 00:42:58 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug