CSSStyleSelector: Any attribute with a decl() can be assumed to be mapped. <http://webkit.org/b/75832>

Reviewed by Antti Koivisto.

Replace isMappedAttribute() check with an assertion. Only a mapped attribute
will have an associated style declaration.

* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::matchAllRules):


Canonical link: https://commits.webkit.org/92640@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104440 268f45cc-cd09-0410-ab3c-d52691b4dbfc